--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -25,3 +25,92 @@
 .text-justify {
 	text-align: justify;
 }
+
+.form-simulasi {
+	position: relative;
+	height: 514px;
+}
+.form-simulasi .bg-img img {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	object-fit: cover;
+}
+.form-simulasi .container > .row > div:last-child {
+	display: flex;
+	justify-content: flex-end;
+}
+.form-simulasi .container > .row > div:last-child .form-block {
+	width: 100%;
+}
+.form-simulasi .container > .row > div:last-child .form-block input,
+.form-simulasi .container > .row > div:last-child .form-block select,
+.form-simulasi .container > .row > div:last-child .form-block textarea {
+	outline: none;
+	border: 2px solid transparent;
+}
+.form-simulasi .container > .row > div:last-child .form-block input:focus,
+.form-simulasi .container > .row > div:last-child .form-block select:focus,
+.form-simulasi .container > .row > div:last-child .form-block textarea:focus {
+	border: 2px solid var(--blue);
+}
+.form-simulasi .container > .row > div:last-child .form-block select {
+	-webkit-appearance: none;
+}
+.form-simulasi .container > .row > div:last-child .form-block .col-12 {
+	position: relative;
+}
+.form-simulasi .container > .row > div:last-child .form-block .col-12 i {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 24px;
+}
+.form-simulasi .container > .row > div:last-child .form-block button {
+	border: none;
+	outline: none;
+	transition: 0.3s;
+}
+.form-simulasi .container > .row > div:last-child .form-block button:hover {
+	background-color: var(--white);
+	color: var(--blue);
+}
+
+@media (max-width: 991.99px) {
+	.form-simulasi {
+		height: 680px;
+	}
+	.form-simulasi .container > .row {
+		padding-top: 30px;
+		padding-bottom: 36px;
+	}
+	.form-simulasi .container > .row > div:first-child div br {
+		display: none;
+	}
+	.form-simulasi .container > .row > div:last-child {
+		justify-content: unset;
+	}
+	.form-simulasi .container > .row > div:last-child .form-block {
+		width: 100%;
+	}
+}
+@media (max-width: 991.99px) {
+	.form-simulasi {
+		height: 520px;
+	}
+}
+@media (max-width: 575.99px) {
+	.form-simulasi {
+		height: 580px;
+	}
+}
+@media (max-width: 400.99px) {
+	.form-simulasi {
+		height: 620px;
+	}
+}
